argocd-helm-charts/hcloud-ccm/templates/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    cluster.x-k8s.io/provider: infrastructure-hetzner
  name: caph-webhook-service
  namespace: caph-system
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    cluster.x-k8s.io/provider: infrastructure-hetzner
    control-plane: caph-controller-manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    cluster.x-k8s.io/provider: infrastructure-hetzner
    control-plane: caph-controller-manager
  name: caph-controller-manager
  namespace: caph-system
spec:
  replicas: 1
  selector:
    matchLabels:
      cluster.x-k8s.io/provider: infrastructure-hetzner
      control-plane: caph-controller-manager
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-logs-container: manager
      labels:
        cluster.x-k8s.io/provider: infrastructure-hetzner
        control-plane: caph-controller-manager
    spec:
      containers:
      - args:
        - --leader-elect=true
        command:
        - /manager
        image: ghcr.io/syself/caph:v1.0.0-beta.33
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: healthz
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: manager
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        - containerPort: 9440
          name: healthz
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /readyz
            port: healthz
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 150m
            memory: 250Mi
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      serviceAccountName: caph-controller-manager
      terminationGracePeriodSeconds: 10
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/control-plane
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: caph-webhook-server-cert
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: caph-system/caph-serving-cert
  labels:
    cluster.x-k8s.io/provider: infrastructure-hetzner
  name: caph-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: caph-webhook-service
      namespace: caph-system
      path: /mutate-infrastructure-cluster-x-k8s-io-v1beta1-hcloudremediationtemplate
  failurePolicy: Fail
  name: mhcloudremediationtemplate.kb.io
  rules:
  - apiGroups:
    - infrastructure.cluster.x-k8s.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hcloudremediationtemplates
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: caph-webhook-service
      namespace: caph-system
      path: /mutate-infrastructure-cluster-x-k8s-io-v1beta1-hetznerbaremetalremediationtemplate
  failurePolicy: Fail
  name: mhetznerbaremetalremediationtemplate.kb.io
  rules:
  - apiGroups:
    - infrastructure.cluster.x-k8s.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hetznerbaremetalremediationtemplates
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: caph-webhook-service
      namespace: caph-system
      path: /mutate-infrastructure-cluster-x-k8s-io-v1beta1-hcloudmachine
  failurePolicy: Fail
  name: mutation.hcloudmachine.infrastructure.cluster.x-k8s.io
  rules:
  - apiGroups:
    - infrastructure.cluster.x-k8s.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hcloudmachines
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: caph-webhook-service
      namespace: caph-system
      path: /mutate-infrastructure-cluster-x-k8s-io-v1beta1-hcloudremediation
  failurePolicy: Fail
  name: mutation.hcloudremediation.infrastructure.cluster.x-k8s.io
  rules:
  - apiGroups:
    - infrastructure.cluster.x-k8s.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hcloudremediations
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: caph-webhook-service
      namespace: caph-system
      path: /mutate-infrastructure-cluster-x-k8s-io-v1beta1-hetznerbaremetalhost
  failurePolicy: Fail
  name: mutation.hetznerbaremetalhost.infrastructure.cluster.x-k8s.io
  rules:
  - apiGroups:
    - infrastructure.cluster.x-k8s.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hetznerbaremetalhosts
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: caph-webhook-service
      namespace: caph-system
      path: /mutate-infrastructure-cluster-x-k8s-io-v1beta1-hetznerbaremetalmachine
  failurePolicy: Fail
  name: mutation.hetznerbaremetalmachine.infrastructure.cluster.x-k8s.io
  rules:
  - apiGroups:
    - infrastructure.cluster.x-k8s.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hetznerbaremetalmachines
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: caph-webhook-service
      namespace: caph-system
      path: /mutate-infrastructure-cluster-x-k8s-io-v1beta1-hetznerbaremetalremediation
  failurePolicy: Fail
  name: mutation.hetznerbaremetalremediation.infrastructure.cluster.x-k8s.io
  rules:
  - apiGroups:
    - infrastructure.cluster.x-k8s.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hetznerbaremetalremediations
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: caph-webhook-service
      namespace: caph-system
      path: /mutate-infrastructure-cluster-x-k8s-io-v1beta1-hetznercluster
  failurePolicy: Fail
  name: mutation.hetznercluster.infrastructure.cluster.x-k8s.io
  rules:
  - apiGroups:
    - infrastructure.cluster.x-k8s.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hetznerclusters
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: caph-system/caph-serving-cert
  labels:
    cluster.x-k8s.io/provider: infrastructure-hetzner
  name: caph-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: caph-webhook-service
      namespace: caph-system
      path: /validate-infrastructure-cluster-x-k8s-io-v1beta1-hcloudmachine
  failurePolicy: Fail
  name: validation.hcloudmachine.infrastructure.cluster.x-k8s.io
  rules:
  - apiGroups:
    - infrastructure.cluster.x-k8s.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hcloudmachines
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: caph-webhook-service
      namespace: caph-system
      path: /validate-infrastructure-cluster-x-k8s-io-v1beta1-hcloudmachinetemplate
  failurePolicy: Fail
  name: validation.hcloudmachinetemplate.infrastructure.x-k8s.io
  rules:
  - apiGroups:
    - infrastructure.cluster.x-k8s.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hcloudmachinetemplates
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: caph-webhook-service
      namespace: caph-system
      path: /validate-infrastructure-cluster-x-k8s-io-v1beta1-hcloudremediation
  failurePolicy: Fail
  name: validation.hcloudremediation.infrastructure.cluster.x-k8s.io
  rules:
  - apiGroups:
    - infrastructure.cluster.x-k8s.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hcloudremediations
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: caph-webhook-service
      namespace: caph-system
      path: /validate-infrastructure-cluster-x-k8s-io-v1beta1-hetznerbaremetalhost
  failurePolicy: Fail
  name: validation.hetznerbaremetalhost.infrastructure.cluster.x-k8s.io
  rules:
  - apiGroups:
    - infrastructure.cluster.x-k8s.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hetznerbaremetalhosts
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: caph-webhook-service
      namespace: caph-system
      path: /validate-infrastructure-cluster-x-k8s-io-v1beta1-hetznerbaremetalmachine
  failurePolicy: Fail
  name: validation.hetznerbaremetalmachine.infrastructure.cluster.x-k8s.io
  rules:
  - apiGroups:
    - infrastructure.cluster.x-k8s.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hetznerbaremetalmachines
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: caph-webhook-service
      namespace: caph-system
      path: /validate-infrastructure-cluster-x-k8s-io-v1beta1-hetznerbaremetalmachinetemplate
  failurePolicy: Fail
  name: validation.hetznerbaremetalmachinetemplate.infrastructure.cluster.x-k8s.io
  rules:
  - apiGroups:
    - infrastructure.cluster.x-k8s.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hetznerbaremetalmachinetemplates
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: caph-webhook-service
      namespace: caph-system
      path: /validate-infrastructure-cluster-x-k8s-io-v1beta1-hetznerbaremetalremediation
  failurePolicy: Fail
  name: validation.hetznerbaremetalremediation.infrastructure.cluster.x-k8s.io
  rules:
  - apiGroups:
    - infrastructure.cluster.x-k8s.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hetznerbaremetalremediations
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: caph-webhook-service
      namespace: caph-system
      path: /validate-infrastructure-cluster-x-k8s-io-v1beta1-hetznercluster
  failurePolicy: Fail
  name: validation.hetznercluster.infrastructure.cluster.x-k8s.io
  rules:
  - apiGroups:
    - infrastructure.cluster.x-k8s.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hetznerclusters
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: caph-webhook-service
      namespace: caph-system
      path: /validate-infrastructure-cluster-x-k8s-io-v1beta1-hetznerclustertemplate
  failurePolicy: Fail
  name: validation.hetznerclustertemplate.infrastructure.cluster.x-k8s.io
  rules:
  - apiGroups:
    - infrastructure.cluster.x-k8s.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hetznerclustertemplates
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: caph-webhook-service
      namespace: caph-system
      path: /validate-infrastructure-cluster-x-k8s-io-v1beta1-hcloudremediationtemplate
  failurePolicy: Fail
  name: vhcloudremediationtemplate.kb.io
  rules:
  - apiGroups:
    - infrastructure.cluster.x-k8s.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hcloudremediationtemplates
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: caph-webhook-service
      namespace: caph-system
      path: /validate-infrastructure-cluster-x-k8s-io-v1beta1-hetznerbaremetalremediationtemplate
  failurePolicy: Fail
  name: vhetznerbaremetalremediationtemplate.kb.io
  rules:
  - apiGroups:
    - infrastructure.cluster.x-k8s.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hetznerbaremetalremediationtemplates
  sideEffects: None
